--- a/css/main.css
+++ b/css/main.css
@@ -250,3 +250,15 @@ input[type=number]{
   background-color: transparent;
   border-color: transparent;
 }
+
+#loading{
+  background-color:black;
+  z-index: 5;
+  position: absolute;
+  width:100%;
+  height:100%;
+  text-align: center;
+  font-size:3em;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
+}
