--- a/css/main.css
+++ b/css/main.css
@@ -262,3 +262,7 @@ input[type=number]{
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   
 }
+#loading ~ *{
+  visibility: hidden;
+  display: none;
+}
