--- a/css/main.css
+++ b/css/main.css
@@ -291,3 +291,12 @@ input[type=number]{
   visibility: hidden;
   display: none;
 }
+
+.save-icon{
+  position: absolute;
+  right:50%;
+  color:green;
+}
+.darkmode .save-icon{
+  color: lime;
+}
