--- a/css/main.css
+++ b/css/main.css
@@ -287,7 +287,18 @@ input[type=number]{
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   
 }
-#loading ~ *{
+#loading ~ *,
+#loading ~ * *{
   visibility: hidden;
   display: none;
+  overflow:hidden;
+}
+
+.save-icon{
+  position: absolute;
+  right:50%;
+  color:green;
+}
+.darkmode .save-icon{
+  color: lime;
 }
