button color fix, alert elem

--- a/css/main.css
+++ b/css/main.css
@@ -130,6 +130,11 @@ span.divider[dashed]{
   border-style:outset;
 }
 
+.darkmode .editing-button {
+    background-color: #474747; 
+    color: white;
+}
+
 .darkmode{
   background-color: black;
 }
